--- a/dev/less/min-max.less
+++ b/dev/less/min-max.less
@@ -38,6 +38,9 @@
 	padding: 100px;
 	border-radius: 50%;
 	transition: 0.1s ease;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	-webkit-tap-highlight-color: transparent;
+
 	@media (max-width: 768px) {
 		padding: 70px;
 		font-size: 65px;
