--- a/dev/less/button.less
+++ b/dev/less/button.less
@@ -10,6 +10,8 @@
 	font-size: 24px;
 	transition: 0.3s ease;
 	border-radius: 15px;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	-webkit-tap-highlight-color: transparent;
 
 	@media (max-width: 768px) {
 		font-size: 18px;
