--- a/dev/less/index.less
+++ b/dev/less/index.less
@@ -32,7 +32,8 @@
 	}
 }
 .levels__list {
-
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	-webkit-tap-highlight-color: transparent;
 }
 .levels__item {
 	margin-bottom: 25px;
