--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -203,6 +203,96 @@ body {
     font-size: 16px
   }
 }
+.game__body {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+  padding-bottom: 20px
+}
+.game__grid {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 80%;
+  flex: 0 1 80%;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  grid-template-columns: repeat(4,minmax(60px,1fr));
+  grid-template-rows: repeat(4,minmax(60px,1fr));
+  row-gap: 15px;
+  -webkit-column-gap: 25px;
+  -moz-column-gap: 25px;
+  column-gap: 25px;
+  margin-bottom: 25px
+}
+@media (max-width:768px) {
+  .game__grid {
+    row-gap: 10px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px
+  }
+}
+@media (max-width:500px) {
+  .game__grid {
+    row-gap: 10px;
+    -webkit-column-gap: 15px;
+    -moz-column-gap: 15px;
+    column-gap: 15px;
+    height: 60%
+  }
+}
+.game__item {
+  border-radius: 15px;
+  border: 2px solid #000
+}
+.button__body {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 20%;
+  flex: 0 1 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 10px 0 20px 0
+}
+.button__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: 35px;
+  height: 100%;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 33.3%;
+  flex: 0 1 33.3%;
+  border: 4px solid #000;
+  border-radius: 15px
+}
+.button__item:not(:last-child) {
+  margin-right: 15px
+}
+.active {
+  background-color: green
+}
+.__no-active {
+  background-color: brown
+}
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
