--- a/dev/less/index.less
+++ b/dev/less/index.less
@@ -42,7 +42,10 @@
 }
 .levels__item:hover{
 	padding-left: 50px;
-	background-color: rgb(235, 235, 235);
+	color: rgb(68, 16, 128);
+	.level__text{
+		color: rgb(68, 16, 128);
+	}
 }
 .level__title {
 	font-size: 25px;
