--- a/dev/less/colored-cells.less
+++ b/dev/less/colored-cells.less
@@ -8,21 +8,20 @@
 	flex: 0 1 80%;
 	display: grid;
 	width: 100%;
-	height: 100%;
 	margin: 0 auto;
-	grid-template-columns: repeat(4, minmax(60px, 1fr));
+	grid-template-columns: repeat(4, minmax(50px, 1fr));
 	grid-template-rows: repeat(4, minmax(60px, 1fr));
 	row-gap: 15px;
 	column-gap: 25px;
 	margin-bottom: 25px;
 	@media (max-width: 768px) {
+		flex: 0 1 50%;
 		row-gap: 10px;
 		column-gap: 20px;
 	}
 	@media (max-width: 500px) {
 		row-gap: 10px;
 		column-gap: 15px;
-		height: 60%;
 	}
 }
 .game__item {
@@ -49,14 +48,19 @@
 	flex: 0 1 33.3%;
 	border: 4px solid #000;
 	border-radius: 15px;
+	cursor: pointer;
+	transition: 0.3s ease;
+}
+.button__item:hover{
+	background-color: rgb(156, 156, 156);
 }
 .button__item:not(:last-child){
 	margin-right: 15px;
 }
 //===========================================================
 .active{
-	background-color: green;
+	background-color: rgb(0, 255, 0);
 }
 .__no-active{
-	background-color: brown;
+	background-color: rgba(212, 0, 0, 0.753);
 }
