--- a/dev/less/timer.less
+++ b/dev/less/timer.less
@@ -13,3 +13,47 @@
 		font-size: 28px;
 	}
 }
+.__ok{
+	position: relative;
+}
+.__ok::after{
+	position: absolute;
+	top: 10px;
+	right: -30px;
+	content: '';
+	width: 35px;
+	height: 35px;
+	border-radius: 50%;
+	background-color: green;
+
+	@media (max-width: 768px) {
+		top: 7px;
+		width: 25px;
+		height: 25px;
+	}
+	@media (max-width: 500px) {
+		top: 5px;
+	}
+}
+.__no{
+	position: relative;
+}
+.__no::after{
+	position: absolute;
+	top: 10px;
+	right: -30px;
+	content: '';
+	width: 35px;
+	height: 35px;
+	border-radius: 50%;
+	background-color: red;
+
+	@media (max-width: 768px) {
+		top: 7px;
+		width: 25px;
+		height: 25px;
+	}
+	@media (max-width: 500px) {
+		top: 5px;
+	}
+}
