--- a/dev/less/color-change.less
+++ b/dev/less/color-change.less
@@ -64,5 +64,7 @@ body{
 		border: 5px solid #000;
 	}
 }
-
+.game__border:active{
+	background-color: rgba(126, 126, 126, 0.178);
+}
 //====================================================================================================================
