--- a/dev/less/colored-cells.less
+++ b/dev/less/colored-cells.less
@@ -50,8 +50,10 @@
 	border-radius: 15px;
 	cursor: pointer;
 	transition: 0.3s ease;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	-webkit-tap-highlight-color: transparent;
 }
-.button__item:hover{
+.button__item:active{
 	background-color: rgb(156, 156, 156);
 }
 .button__item:not(:last-child){
